# echoes

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: TIMESTAMP_FIX_SUMMARY.md  code-review-r1.md  funasr-integration.md  implementation-plan.md  optimization-roadmap-0301.md  prompts-design.md  system-design.md
docs/design/: asr-setup.md  cli-interaction.md  segment-merging-strategy.md  zai-provider-plan.md
docs/plans/: 2026-03-01-daily-batch-processing-v2.md  2026-03-01-daily-batch-processing.md  2026-03-01-p1-implementation-plan.md
prompts/: business.txt  chat.txt  classifier.txt  idea.txt  learning.txt  meeting.txt  phone.txt  value_detector.txt
scripts/: download_funasr_models.py  download_models.py
src/audio_journal/: __init__.py  batch.py  cli.py  config.py  pipeline.py
src/audio_journal/analyzer/: __init__.py  base.py  business.py  chat.py  idea.py  learning.py  meeting.py  phone.py
src/audio_journal/archiver/: __init__.py  local.py
test_data/: fixture_meeting.json  fixture_monologue.json  fixture_phone.json
test_results/: integration_test.py  test_report_20260228.md
tests/: test_analyzer_business.py  test_analyzer_chat.py  test_analyzer_idea.py  test_analyzer_learning.py  test_analyzer_meeting.py  test_analyzer_phone.py  test_archiver_local.py  test_asr_funasr.py  test_asr_mock.py  test_batch.py  test_chunker.py  test_classifier_scene.py  test_cli.py  test_config.py  test_llm_provider.py  test_merger.py  test_pipeline.py  test_pipeline_merger.py  test_schemas.py  test_segmenter.py  test_storage_index.py  test_watcher.py
(+26 files in other folders)
